# albumine

./: .dockerignore  .env.example  .gitignore  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docker/: Dockerfile  entrypoint.sh  supervisord.conf
docs/: ARCHITECTURE.md  INSTALL-UNRAID.md  README.md
src/albumine/: __init__.py  cli.py  config.py  i18n.py  logging.py  main.py  pipeline.py  tasks.py
src/albumine/ai/: __init__.py  anthropic.py  base.py  manager.py  ollama.py  openai_compat.py  prompts.py
src/albumine/api/: __init__.py  actions.py  deps.py  gallery.py  history.py  settings_panel.py  status.py
src/albumine/db/: __init__.py  engine.py  models.py  settings_store.py
src/albumine/ingest/: __init__.py  hashing.py  models.py  pair_detector.py  pdf_splitter.py  watcher.py
src/albumine/parsing/: __init__.py  date_parser.py
src/albumine/processing/: __init__.py  back.py  enhance.py  exiftool_albumine.config  front.py  metadata_writer.py
src/albumine/web/static/: app.css
src/albumine/web/templates/: _ai_health.html  _correction_form.html  _macros.html  _ollama_pull.html  base.html  detail.html  error.html  gallery.html  history.html  index.html  settings.html  status.html
src/albumine/web/translations/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  tr.json  uk.json  zh-Hans.json
tests/: conftest.py  test_ai_models.py  test_ai_providers.py  test_back.py  test_cli.py  test_date_parser.py  test_db.py  test_enhance.py  test_front.py  test_hashing.py  test_health.py  test_i18n.py  test_metadata_writer.py  test_ollama_pull.py  test_pair_detector.py  test_pdf_splitter.py  test_pipeline.py  test_prompts.py  test_provider_manager.py  test_settings_restart.py  test_settings_store.py  test_tasks.py  test_watcher.py  test_web.py
unraid/: albumine.xml
